Fix header align

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -354,7 +354,7 @@ opacity: 0.2;
 .title{
   font-family: "futura";
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   font-style: oblique;
 }
 
